<resources>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="radio_button_text_every_day">Every day</string>
    <string name="radio_button_text_5_times_per_week">5 times per week</string>
    <string name="radio_button_text_once_a_week">Once a week</string>
    <string name="text_view_how_often">How often?</string>
    <string name="text_view_name_your_new_habit">Name your new habit</string>
    <string name="fab_add_new">Add new</string>
    <string name="fab_save">Save</string>
    <string name="today">today</string>
    <string name="yesterday">yesterday</string>
    <string name="day_before_yesterday">day \n before \n yesterday</string>
</resources>